--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 __pycache__/
 *.pyc
 *.pyo
+*.egg-info/
 .pytest_cache/
 .mypy_cache/
 .ruff_cache/
+build/
+dist/
+.coverage
+coverage.xml
+htmlcov/
