setup project with watch for rapi development

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,15 @@ testing =
     pytest
     pytest-cov
     pytest-random-order
+    pytest-watch
+    pytest-testmon
+    pytest-xdist
     ruff
     mypy
+    bandit
+    pip-audit
+    radon
+    xenon
 
 [tool:pytest]
 addopts = --verbose
