--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ setenv =
     PYTHONDONTWRITEBYTECODE = 1
     PYTHONPATH = {toxinidir}
     PYTHONTRACEMALLOC=1
+    GLOB_EXCLUDE = *.egg-info,*venv*,.git,.github,.mypy_cache,.pytest_cache,__pycache__,build,dist,.tox
 passenv =
     HOME
     SETUPTOOLS_*
@@ -22,6 +23,10 @@ commands =
     ruff check .
     ruff format --check .
     mypy src
+    bandit -r src
+    pip-audit
+    radon cc . -a -s -nb --exclude="{env:GLOB_EXCLUDE}"
+    xenon --exclude="{env:GLOB_EXCLUDE}" --max-absolute A --max-modules A --max-average A .
     pytest --junitxml=build/pytest.xml -vv --tb=native --random-order --cov ai_unifier_assesment --cov-fail-under=100 --cov-report term-missing --cov-report xml --cov-config=.coveragerc -W error {posargs}
 
 [testenv:format]
@@ -32,6 +37,17 @@ extras =
 commands =
     ruff format .
     ruff check --fix .
+
+[testenv:watch]
+description = Watch for file changes and invoke pytest to run automated tests as need
+changedir = {toxinidir}
+usedevelop = True
+setenv =
+    TESTMON_DATAFILE = {envdir}/.testmon
+    PYTHONTRACEMALLOC=1
+passenv =
+commands =
+    ptw --poll --runner "pytest --testmon --random-order -n auto" {posargs}
 
 [testenv:test]
 description = Run tests only
