Initial version of simple chat stream api exposed

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ python_requires = >=3.12
 # Runtime dependencies (add your project dependencies here)
 install_requires =
     importlib-metadata; python_version<"3.12"
+    pydantic-settings
+    fastapi
+    uvicorn[standard]
+    langchain-openai
+    langchain-core
 
 [options.packages.find]
 where = src
@@ -40,6 +45,10 @@ testing =
     pytest-watch
     pytest-testmon
     pytest-xdist
+    pytest-httpx
+    pytest-asyncio
+    httpx
+    assertpy
     ruff
     mypy
     bandit
