--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ install_requires =
     uvicorn[standard]
     langchain-openai
     langchain-core
+    langchain-community
 
 [options.packages.find]
 where = src
