--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,51 @@ services:
     depends_on:
       ollama:
         condition: service_healthy
-    entrypoint: ["ollama", "pull", "nomic-embed-text"]
+    entrypoint: ["sh", "-c", "ollama pull nomic-embed-text && ollama pull llama3.2"]
     environment:
       - OLLAMA_HOST=ollama:11434
+
+  chroma:
+    image: chromadb/chroma:latest
+    container_name: chroma
+    ports:
+      - "8001:8000"
+    volumes:
+      - chroma_data:/chroma/chroma
+    environment:
+      - IS_PERSISTENT=TRUE
+      - ANONYMIZED_TELEMETRY=FALSE
+    restart: unless-stopped
+
+  ingestion:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - .:/app
+      - ./data/corpus:/app/data/corpus
+    environment:
+      - OPENAI_BASE_URL=${OPENAI_BASE_URL}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OLLAMA_BASE_URL=http://ollama:11434
+      - CHROMA_HOST=chroma
+      - CHROMA_PORT=8000
+    depends_on:
+      ollama-pull:
+        condition: service_completed_successfully
+      chroma:
+        condition: service_started
+    command: >
+      bash -c "
+        set -e &&
+        pip install -e . &&
+        mkdir -p /app/data/corpus &&
+        if [ ! -f /app/data/corpus/lotr-fellowship.pdf ]; then
+          echo 'Downloading Lord of the Rings...' &&
+          curl -L 'https://www.mrsmuellersworld.com/uploads/1/3/0/5/13054185/lord-of-the-rings-01-the-fellowship-of-the-ring_full_text.pdf' -o /app/data/corpus/lotr-fellowship.pdf;
+        fi &&
+        python -m ai_unifier_assesment.ingest --directory /app/data/corpus
+      "
 
   app:
     build:
@@ -31,11 +73,13 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - MODEL_NAME=${MODEL_NAME:-Gpt4o}
       - OLLAMA_BASE_URL=http://ollama:11434
+      - CHROMA_HOST=chroma
+      - CHROMA_PORT=8000
       - FASTAPI_HOST=0.0.0.0
       - FASTAPI_PORT=8000
     depends_on:
-      ollama:
-        condition: service_healthy
+      ingestion:
+        condition: service_completed_successfully
     command: >
       bash -c "pip install -e . && python -m ai_unifier_assesment"
     volumes:
@@ -43,3 +87,4 @@ services:
 
 volumes:
   ollama_data:
+  chroma_data:
