--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,11 @@ install_requires =
     langchain-openai
     langchain-core
     langchain-community
+    langchain-text-splitters
+    langchain-chroma
+    chromadb
+    pypdf
+    bs4
 
 [options.packages.find]
 where = src
