--- a/setup.cfg
+++ b/setup.cfg
@@ -32,9 +32,14 @@ install_requires =
     langchain-community
     langchain-text-splitters
     langchain-chroma
+    langchain-ollama
     chromadb
     pypdf
     bs4
+    sqlalchemy
+    psycopg2-binary
+    ragas
+    rapidfuzz
 
 [options.packages.find]
 where = src
