--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:LangchainLLMWrapper is deprecated:DeprecationWarning",
+]
