--- a/setup.cfg
+++ b/setup.cfg
@@ -37,9 +37,10 @@ install_requires =
     pypdf
     bs4
     sqlalchemy
-    psycopg2-binary
+    psycopg[binary]
     ragas
     rapidfuzz
+    tiktoken
 
 [options.packages.find]
 where = src
