Travel agent implemented with three tools, flight weather and attractions

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     langchain-openai
     langchain-core
     langchain-community
+    langgraph
     langchain-text-splitters
     langchain-chroma
     langchain-ollama
