--- a/setup.cfg
+++ b/setup.cfg
@@ -39,9 +39,11 @@ install_requires =
     bs4
     sqlalchemy
     psycopg[binary]
+    alembic
     ragas
     rapidfuzz
     tiktoken
+    pytest
 
 [options.packages.find]
 where = src
