--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,8 @@ services:
         condition: service_started
       postgres:
         condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
     command: >
       bash -c "
         set -e &&
@@ -119,6 +121,8 @@ services:
       - POSTGRES_PASSWORD=rag_password
       - POSTGRES_DB=rag_evaluation
     depends_on:
+      migrate:
+        condition: service_completed_successfully
       ingestion:
         condition: service_completed_successfully
     command: >
